@@ -37,23 +37,6 @@ HOSTS:
         gpgkeys:
           - https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-$releasever
 
-  el8-tpm-2-0:
-    roles:
-      - hirs
-      - tpm_2_0
-    platform:   el-8-x86_64
-    box:        centos/8
-    hypervisor: <%= hypervisor %>
-    yum_repos:
-      epel:
-        mirrorlist: 'https://mirrors.fedoraproject.org/metalink?repo=epel-8&arch=$basearch'
-        gpgkeys:
-          - https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-$releasever
-      # The TPM2 simulator RPMs are currently in the unstable repositories
-      simp_unstable:
-        baseurl: 'https://download.simp-project.com/simp/yum/rolling/6/el/$releasever/$basearch/simp/'
-        gpgcheck: 0
-
   el6-tpm-1-2:
     roles:
       - hirs
